Fixed our-story overflow mobile issue

--- a/src/app/our-story/our-story.component.css
+++ b/src/app/our-story/our-story.component.css
@@ -1,4 +1,6 @@
 .our-story__wrapper {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0 auto;
   width: 90%;
   text-align: center;
